--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
     <properties>
         <java.version>23</java.version>
         <spring-boot.version>3.4.1</spring-boot.version>
+        <spring.boot.maven.plugin.version>3.4.1</spring.boot.maven.plugin.version>
         <spring-ai.version>1.0.0-M4</spring-ai.version>
-
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
